--- a/views/header.jade
+++ b/views/header.jade
@@ -27,6 +27,7 @@ head
 
     script(src='/js/lib/bootstrap3-typeahead.js')
     script(src='/js/lib/bloodhound.js')
+    script(src='/js/app/jquery.card.js')
 
     script.
         $(document).ready(function() {
