Fixed cssmin and uglify

--- a/views/header.jade
+++ b/views/header.jade
@@ -5,29 +5,12 @@ head
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
 
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
-    link(href='/bower_dependencies/bootstrap/dist/css/bootstrap.css', rel='stylesheet')
-    link(href='/bower_dependencies/bootstrapValidator/dist/css/bootstrapValidator.css', rel='stylesheet')
-    link(href='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.css', rel='stylesheet')
-    link(href='/css/main.css', rel='stylesheet')
-    link(rel="stylesheet" href="/bower_dependencies/76d-social-icons/assets/css/social-icons.css")
-    link(rel="stylesheet" href="/bower_dependencies/76d-social-icons/assets/css/main.css")
+    link(href='/combined.min.css', rel='stylesheet')
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
       script(src='https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js')
-    script(src='/bower_dependencies/jquery/jquery.js')
-    script(src='/bower_dependencies/bootstrap/dist/js/bootstrap.js')
-    script(src='/bower_dependencies/bootstrapValidator/dist/js/bootstrapValidator.js')
-    script(src='/bower_dependencies/bootbox/bootbox.js')
-    script(src='/bower_dependencies/underscore/underscore.js')
-    script(src='/bower_dependencies/moment/moment.js')
-    script(src='/bower_dependencies/eonasdan-bootstrap-datetimepicker/build/js/bootstrap-datetimepicker.min.js')
-
-    script(src='/js/app/common.js')
-
-    script(src='/js/lib/bootstrap3-typeahead.js')
-    script(src='/js/lib/bloodhound.js')
-    script(src='/js/app/jquery.card.js')
+    script(src='/js/combined.min.js')
 
     script.
         $(document).ready(function() {
