--- a/views/header.jade
+++ b/views/header.jade
@@ -5,7 +5,7 @@ head
     meta(name='viewport', content='width=device-width, initial-scale=1, user-scalable=false')
 
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
-    link(href='/combined.min.css?v=version', rel='stylesheet')
+    link(href='/css/combined.min.css?v=version', rel='stylesheet')
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
