--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,3 +46,58 @@
 {
     margin-left: 5px;
 }
+
+.initials-profile-image
+{
+    -webkit-background-clip: border-box;
+    -webkit-background-origin: padding-box;
+    -webkit-background-size: auto;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: rgba(0,0,0,.1);
+    background-image: none;
+    background-origin: padding-box;
+    background-size: auto;
+    box-sizing: border-box;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    display: block;
+    font-family: 'Helvetica Neue Custom', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 20px;
+    font-weight: bold;
+    height: 40px;
+    line-height: 40px;
+    list-style-type: none;
+    text-align: center;
+    width: 40px;
+}
+
+.initials-profile-image-large
+{
+    -webkit-background-clip: border-box;
+    -webkit-background-origin: padding-box;
+    -webkit-background-size: auto;
+    -webkit-font-smoothing: antialiased;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+    background-attachment: scroll;
+    background-clip: border-box;
+    background-color: rgba(0,0,0,.1);
+    background-image: none;
+    background-origin: padding-box;
+    background-size: auto;
+    box-sizing: border-box;
+    color: rgb(255, 255, 255);
+    cursor: pointer;
+    display: block;
+    font-family: 'Helvetica Neue Custom', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    font-size: 60px;
+    font-weight: bold;
+    height: 100%;
+    padding-top: 31px;
+    line-height: 100%;
+    list-style-type: none;
+    text-align: center;
+    width: 100%;
+}
