--- a/views/header.jade
+++ b/views/header.jade
@@ -6,6 +6,7 @@ head
 
     link(href='http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,400italic', rel='stylesheet', type='text/css')
     link(href='/css/combined.min.css?v=version', rel='stylesheet')
+    link(href='/css/style.css?v=version', rel='stylesheet')
 
     //if lt IE 9
       script(src='https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js')
@@ -32,7 +33,7 @@ div.masthead(role='banner')
                             | #{formatName(loggedInUser.first_name, loggedInUser.last_name)}
                     .avatar.avatar-small
                         .shadow
-                        .placeholder
+                        .initials-profile-image= getNameInitials(loggedInUser.first_name, loggedInUser.last_name)
                         img(src=ApiUrlDelegate.userProfilePicture(loggedInUser.id))
                         .caret
                     .user-modal(style='display: none;')
