--- a/public/css/combined.css
+++ b/public/css/combined.css
@@ -7935,7 +7935,6 @@ a:hover {
   background: #3A519C;
   color: #FFFFFF;
   font-weight: bold;
-  width: 100%;
 }
 .btn-facebook:hover,
 .btn-facebook:active,
@@ -8533,11 +8532,10 @@ a:hover {
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
   z-index: 9996;
   font-size: 150px;
   line-height: 150px;
-  font-family: 'snticons';
-  content: '\e008';
 }
 .avatar .status {
   position: absolute;
