--- a/public/css/main.css
+++ b/public/css/main.css
@@ -1982,11 +1982,10 @@ a:hover {
   position: absolute;
   width: 100%;
   height: 100%;
+  top: 0;
   z-index: 9996;
   font-size: 150px;
   line-height: 150px;
-  font-family: 'snticons';
-  content: '\e008';
 }
 .avatar .status {
   position: absolute;
