--- a/public/css/combined.css
+++ b/public/css/combined.css
@@ -9723,3 +9723,17 @@ a:hover {
     text-align: center;
     width: 100%;
 }
+
+.image-edit
+{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 10000;
+    visibility: hidden;
+}
+
+.avatar:hover .image-edit
+{
+    visibility: inherit;
+}
