--- a/public/css/style.css
+++ b/public/css/style.css
@@ -105,3 +105,17 @@
     text-align: center;
     width: 100%;
 }
+
+.image-edit
+{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    z-index: 10000;
+    visibility: hidden;
+}
+
+.avatar:hover .image-edit
+{
+    visibility: inherit;
+}
