--- a/views/dashboard/cards/BasicInfoCard.jade
+++ b/views/dashboard/cards/BasicInfoCard.jade
@@ -1,10 +1,10 @@
-.card
+.card.main-card
     .item
         .header-row.row
             h5.col-xs-4 Basic Info
             .header-link.col-xs-8
                 if isEditable
-                    a.btn.btn-primary#editUserProfileBtn(data-id=userProfile.id)
+                    a.btn.btn-primary.editCardBtn
                         i.icon-pencil
                     | &nbsp;
         .user-profile
@@ -12,6 +12,13 @@
                 .shadow
                 .initials-profile-image-large= getNameInitials(user.first_name, user.last_name)
                 img(src=ApiUrlDelegate.userProfilePicture(user.id) + '?imageSize=200')
+                if isEditable
+                    .image-edit
+                        a.btn.btn-success.btn-xs(href="javascript: void(0);")#selectFileBtn
+                            i.icon-pencil
+                        form#fileUploadForm(action=ApiUrlDelegate.userProfilePicture(user.id), method="post", enctype="multipart/form-data")
+                            input#selectFile(type='file', name='profile', style='display: none')
+                            input#selectFileSubmit(type='submit', style='display: none')
             .info
                 .info-upper
                     .user-displayname= formatName(user.first_name, user.last_name, user.title)
@@ -24,11 +31,6 @@
                             if zone.zone_id == user.timezone
                                 | #{formatTimezone(zone.gmt_offset)}
             .clearer
-            if isEditable
-                a.btn.btn-success.btn-xs#selectFileBtn Upload
-                form#fileUploadForm(action=ApiUrlDelegate.userProfilePicture(user.id), method="post", enctype="multipart/form-data")
-                    input#selectFile(type='file', name='profile', style='display: none')
-                    input#selectFileSubmit(type='submit', style='display: none')
             .profile
                 p= userProfile.short_desc
     .item
@@ -47,3 +49,52 @@
                         li Add Skill&nbsp;
                             a#addSkillBtn
                                 i.icon-plus
+if isEditable
+    .card.edit-card
+        form
+            .item-edit
+                .item
+                    .row
+                        h5.col-xs-8 Edit Basic Info
+                        .header-link.col-xs-4
+                            a.btn.btn-danger.cancelEditCardBtn
+                                i.icon-cancel
+                .item
+                    .row
+                        .form-group
+                            h3 Title
+                            select.form-control(name='title')
+                                each key,option in Salutation
+                                    option(value="#{option}" selected = ('#{loggedInUser.title}' == '#{option}')) #{key}
+                        .form-group
+                            h3 First Name
+                            input.form-control(type='text', name='first_name', value=loggedInUser.first_name)
+                        .form-group
+                            h3 Middle Name
+                            input.form-control(type='text', name='middle_name', value=loggedInUser.middle_name)
+                        .form-group
+                            h3 Last Name
+                            input.form-control(type='text', name='last_name', value=loggedInUser.last_name)
+                        .form-group
+                            h3 Summary
+                            input.form-control(type='text', name='short_desc', value=userProfile.short_desc, autocomplete='off')
+                        .form-group
+                            h3 Description
+                            input.form-control(name='long_desc', value= userProfile.long_desc)
+                        .form-group
+                            h3 Industry
+                            select.form-control(name='industry')
+                                each key,option in IndustryCodes
+                                    option(value="#{option}", selected = ('#{loggedInUser.industry}' == '#{option}')) #{key}
+                        .form-group
+                            h3 Birthday
+                            input.form-control(type='text', class="datepicker" value = loggedInUser.date_of_birth, name= "birthDate")
+                        .form-group
+                            h3 TimeZone
+                            select.form-control(name='timezone')
+                                each zone in Timezone
+                                    option(value="#{zone.zone_id}", selected = ('#{zone.zone_id}' == '#{loggedInUser.timezone}')) (#{formatTimezone(zone.gmt_offset)}) #{zone.zone_name}
+                            .clearer
+                        div.links-editing
+                            p.edit-schedules
+                                input.btn.btn-primary(type='submit', value='Save')
